--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "webpage for BackStage Talks magazine",
   "main": "app.js",
   "scripts": {
-    "compile:sass": "node-sass main.scss css/main.css -w"
+    "watch:sass": "node-sass main.scss css/main.css -w",
+    "devserver": "live-server",
+    "start": "npm-run-all --parallel devserver watch:sass",
+    "compile:sass": "node-sass main.scss css/main.comp.css",
+
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/main.comp.css -o css/main.prefix.css",
+    "compress:css": "node-sass css/main.prefix.css css/main.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
   "repository": {
     "type": "git",
@@ -17,6 +24,10 @@
   },
   "homepage": "https://github.com/Ng1n3/BackStage-Talks-Magazine#readme",
   "devDependencies": {
-    "node-sass": "^8.0.0"
+    "autoprefixer": "^10.4.14",
+    "concat": "^1.0.3",
+    "node-sass": "^8.0.0",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^10.1.0"
   }
 }
